# Automation

./: CMakeLists.txt
Automation/: Core.cpp
cmake/: AutomationConfig.cmake
include/: Automation.hpp
include/AutoTesting/: Core.cpp  Core.hpp
include/Automation/: Core.hpp
include/Eightest/: Core.hpp  CoreRun.hpp
launcher/: Launcher.hpp
src/: Automation.cpp
src/Automation/: Core.cpp
src/Eightest/: Core.cpp
test/: Launcher.cpp
